src/objects/Apttus_Billing__CustomNumberingEntry__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Instances of the custom Numbering settings for all the Object Types supported.</description>
    <fields>
        <fullName>Apttus_Billing__FieldFive__c</fullName>
        <description>The fifth field.</description>
        <inlineHelpText>The fifth field.</inlineHelpText>
        <label>Field 5</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FieldFour__c</fullName>
        <description>The fourth field.</description>
        <inlineHelpText>The fourth field.</inlineHelpText>
        <label>Field 4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FieldOne__c</fullName>
        <description>First Field.</description>
        <inlineHelpText>First Field.</inlineHelpText>
        <label>Field 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FieldThree__c</fullName>
        <description>The third field.</description>
        <inlineHelpText>The third field.</inlineHelpText>
        <label>Field 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FieldTwo__c</fullName>
        <description>The second field.</description>
        <inlineHelpText>The second field.</inlineHelpText>
        <label>Field 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FormatSeparator__c</fullName>
        <description>Format Separator used in the custom number.</description>
        <inlineHelpText>Format Separator used in the custom number.</inlineHelpText>
        <label>Format Separator</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__NumberLength__c</fullName>
        <defaultValue>9</defaultValue>
        <description>The Length of the Custom Number.</description>
        <inlineHelpText>The Length of the Custom Number.</inlineHelpText>
        <label>Number Length</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ObjectType__c</fullName>
        <description>Invoice, Credit Memo, Refund, Payment</description>
        <inlineHelpText>Invoice, Credit Memo, Refund, Payment</inlineHelpText>
        <label>Object Type</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Prefix__c</fullName>
        <description>Prefix to be used in the custom number.</description>
        <inlineHelpText>Prefix to be used in the custom number.</inlineHelpText>
        <label>Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__StartingNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Starting Number to be used in the Custom Numbering.</description>
        <inlineHelpText>Starting Number to be used in the Custom Numbering.</inlineHelpText>
        <label>Starting Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Suffix__c</fullName>
        <description>Suffix to be used in the custom number.</description>
        <inlineHelpText>Suffix to be used in the custom number.</inlineHelpText>
        <label>Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Custom Numbering Entry</label>
</CustomObject>